antlr/PythonParser.java
// $ANTLR !Unknown version! Python.g 2012-08-29 21:38:41

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
/** Python 2.3.3 Grammar
 *
 *  Terence Parr and Loring Craymer
 *  February 2004
 *
 *  Converted to ANTLR v3 November 2005 by Terence Parr.
 *
 *  This grammar was derived automatically from the Python 2.3.3
 *  parser grammar to get a syntactically correct ANTLR grammar
 *  for Python.  Then Terence hand tweaked it to be semantically
 *  correct; i.e., removed lookahead issues etc...  It is LL(1)
 *  except for the (sometimes optional) trailing commas and semi-colons.
 *  It needs two symbols of lookahead in this case.
 *
 *  Starting with Loring's preliminary lexer for Python, I modified it
 *  to do my version of the whole nasty INDENT/DEDENT issue just so I
 *  could understand the problem better.  This grammar requires
 *  PythonTokenStream.java to work.  Also I used some rules from the
 *  semi-formal grammar on the web for Python (automatically
 *  translated to ANTLR format by an ANTLR grammar, naturally <grin>).
 *  The lexical rules for python are particularly nasty and it took me
 *  a long time to get it 'right'; i.e., think about it in the proper
 *  way.  Resist changing the lexer unless you've used ANTLR a lot. ;)
 *
 *  I (Terence) tested this by running it on the jython-2.1/Lib
 *  directory of 40k lines of Python.
 *  
 */
public class PythonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INDENT", "DEDENT", "NEWLINE", "AT", "LPAREN", "RPAREN", "NAME", "DOT", "COLON", "COMMA", "STAR", "DOUBLESTAR", "ASSIGN", "SEMI", "PLUSEQUAL", "MINUSEQUAL", "STAREQUAL", "SLASHEQUAL", "PERCENTEQUAL", "AMPEREQUAL", "VBAREQUAL", "CIRCUMFLEXEQUAL", "LEFTSHIFTEQUAL", "RIGHTSHIFTEQUAL", "DOUBLESTAREQUAL", "DOUBLESLASHEQUAL", "RIGHTSHIFT", "OR", "AND", "NOT", "LESS", "GREATER", "EQUAL", "GREATEREQUAL", "LESSEQUAL", "ALT_NOTEQUAL", "NOTEQUAL", "VBAR", "CIRCUMFLEX", "AMPER", "LEFTSHIFT", "PLUS", "MINUS", "SLASH", "PERCENT", "DOUBLESLASH", "TILDE", "LBRACK", "RBRACK", "LCURLY", "RCURLY", "BACKQUOTE", "INT", "LONGINT", "FLOAT", "COMPLEX", "STRING", "DIGITS", "Exponent", "TRIAPOS", "TRIQUOTE", "ESC", "CONTINUED_LINE", "WS", "LEADING_WS", "COMMENT", "'def'", "'print'", "'del'", "'pass'", "'break'", "'continue'", "'return'", "'raise'", "'import'", "'from'", "'as'", "'global'", "'exec'", "'in'", "'assert'", "'if'", "'else'", "'elif'", "'while'", "'for'", "'try'", "'finally'", "'with'", "'except'", "'is'", "'lambda'", "'class'", "'yield'"
    };
    public static final int SLASHEQUAL=21;
    public static final int BACKQUOTE=55;
    public static final int STAR=14;
    public static final int CIRCUMFLEXEQUAL=25;
    public static final int TRIAPOS=63;
    public static final int GREATEREQUAL=37;
    public static final int COMPLEX=59;
    public static final int NOT=33;
    public static final int EOF=-1;
    public static final int LEADING_WS=68;
    public static final int NOTEQUAL=40;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int MINUSEQUAL=19;
    public static final int VBAR=41;
    public static final int RPAREN=9;
    public static final int T__91=91;
    public static final int NAME=10;
    public static final int T__92=92;
    public static final int GREATER=35;
    public static final int T__90=90;
    public static final int DOUBLESTAREQUAL=28;
    public static final int LESS=34;
    public static final int COMMENT=69;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int RBRACK=52;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int LCURLY=53;
    public static final int INT=56;
    public static final int T__85=85;
    public static final int RIGHTSHIFT=30;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int DOUBLESLASHEQUAL=29;
    public static final int WS=67;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int VBAREQUAL=24;
    public static final int OR=31;
    public static final int LONGINT=57;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int PERCENTEQUAL=22;
    public static final int LESSEQUAL=38;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int DOUBLESLASH=49;
    public static final int CONTINUED_LINE=66;
    public static final int LBRACK=51;
    public static final int DOUBLESTAR=15;
    public static final int ESC=65;
    public static final int DIGITS=61;
    public static final int Exponent=62;
    public static final int DEDENT=5;
    public static final int FLOAT=58;
    public static final int RIGHTSHIFTEQUAL=27;
    public static final int AND=32;
    public static final int LPAREN=8;
    public static final int INDENT=4;
    public static final int PLUSEQUAL=18;
    public static final int AT=7;
    public static final int SLASH=47;
    public static final int COMMA=13;
    public static final int AMPER=43;
    public static final int EQUAL=36;
    public static final int TILDE=50;
    public static final int LEFTSHIFTEQUAL=26;
    public static final int LEFTSHIFT=44;
    public static final int PLUS=45;
    public static final int DOT=11;
    public static final int PERCENT=48;
    public static final int MINUS=46;
    public static final int SEMI=17;
    public static final int TRIQUOTE=64;
    public static final int COLON=12;
    public static final int NEWLINE=6;
    public static final int AMPEREQUAL=23;
    public static final int RCURLY=54;
    public static final int ASSIGN=16;
    public static final int STAREQUAL=20;
    public static final int CIRCUMFLEX=42;
    public static final int STRING=60;
    public static final int ALT_NOTEQUAL=39;

    // delegates
    // delegators


        public PythonParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PythonParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PythonParser.tokenNames; }
    public String getGrammarFileName() { return "Python.g"; }



    // $ANTLR start "single_input"
    // Python.g:86:1: single_input : ( NEWLINE | simple_stmt | compound_stmt NEWLINE );
    public final void single_input() throws RecognitionException {
        try {
            // Python.g:86:14: ( NEWLINE | simple_stmt | compound_stmt NEWLINE )
            int alt1=3;
            switch ( input.LA(1) ) {
            case NEWLINE:
                {
                alt1=1;
                }
                break;
            case LPAREN:
            case NAME:
            case NOT:
            case PLUS:
            case MINUS:
            case TILDE:
            case LBRACK:
            case LCURLY:
            case BACKQUOTE:
            case INT:
            case LONGINT:
            case FLOAT:
            case COMPLEX:
            case STRING:
            case 71:
            case 72:
            case 73:
            case 74:
            case 75:
            case 76:
            case 77:
            case 78:
            case 79:
            case 81:
            case 82:
            case 84:
            case 95:
            case 97:
                {
                alt1=2;
                }
                break;
            case AT:
            case 70:
            case 85:
            case 88:
            case 89:
            case 90:
            case 92:
            case 96:
                {
                alt1=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // Python.g:86:16: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_single_input44); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Python.g:87:16: simple_stmt
                    {
                    pushFollow(FOLLOW_simple_stmt_in_single_input61);
                    simple_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // Python.g:88:16: compound_stmt NEWLINE
                    {
                    pushFollow(FOLLOW_compound_stmt_in_single_input78);
                    compound_stmt();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_single_input80); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "single_input"


    // $ANTLR start "file_input"
    // Python.g:91:1: file_input : ( NEWLINE | stmt )* ;
    public final void file_input() throws RecognitionException {
        try {
            // Python.g:91:12: ( ( NEWLINE | stmt )* )
            // Python.g:91:14: ( NEWLINE | stmt )*
            {
            // Python.g:91:14: ( NEWLINE | stmt )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==NEWLINE) ) {
                    alt2=1;
                }
                else if ( ((LA2_0>=AT && LA2_0<=LPAREN)||LA2_0==NAME||LA2_0==NOT||(LA2_0>=PLUS && LA2_0<=MINUS)||(LA2_0>=TILDE && LA2_0<=LBRACK)||LA2_0==LCURLY||(LA2_0>=BACKQUOTE && LA2_0<=STRING)||(LA2_0>=70 && LA2_0<=79)||(LA2_0>=81 && LA2_0<=82)||(LA2_0>=84 && LA2_0<=85)||(LA2_0>=88 && LA2_0<=90)||LA2_0==92||(LA2_0>=95 && LA2_0<=97)) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // Python.g:91:15: NEWLINE
            	    {
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_file_input103); if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // Python.g:91:25: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_file_input107);
            	    stmt();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "file_input"


    // $ANTLR start "eval_input"
    // Python.g:94:1: eval_input : ( NEWLINE )* testlist ( NEWLINE )* ;
    public final void eval_input() throws RecognitionException {
        try {
            // Python.g:94:12: ( ( NEWLINE )* testlist ( NEWLINE )* )
            // Python.g:94:14: ( NEWLINE )* testlist ( NEWLINE )*
            {
            // Python.g:94:14: ( NEWLINE )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NEWLINE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Python.g:94:15: NEWLINE
            	    {
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_eval_input130); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            pushFollow(FOLLOW_testlist_in_eval_input134);
            testlist();

            state._fsp--;
            if (state.failed) return ;
            // Python.g:94:34: ( NEWLINE )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==NEWLINE) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Python.g:94:35: NEWLINE
            	    {
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_eval_input137); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "eval_input"


    // $ANTLR start "decorators"
    // Python.g:97:1: decorators : ( decorator )+ ;
    public final void decorators() throws RecognitionException {
        try {
            // Python.g:97:11: ( ( decorator )+ )
            // Python.g:97:13: ( decorator )+
            {
            // Python.g:97:13: ( decorator )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==AT) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // Python.g:97:13: decorator
            	    {
            	    pushFollow(FOLLOW_decorator_in_decorators158);
            	    decorator();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decorators"


    // $ANTLR start "decorator"
    // Python.g:100:1: decorator : AT dotted_attr ( LPAREN ( arglist )? RPAREN )? NEWLINE ;
    public final void decorator() throws RecognitionException {
        try {
            // Python.g:100:10: ( AT dotted_attr ( LPAREN ( arglist )? RPAREN )? NEWLINE )
            // Python.g:100:12: AT dotted_attr ( LPAREN ( arglist )? RPAREN )? NEWLINE
            {
            match(input,AT,FOLLOW_AT_in_decorator177); if (state.failed) return ;
            pushFollow(FOLLOW_dotted_attr_in_decorator179);
            dotted_attr();

            state._fsp--;
            if (state.failed) return ;
            // Python.g:100:27: ( LPAREN ( arglist )? RPAREN )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LPAREN) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // Python.g:100:28: LPAREN ( arglist )? RPAREN
                    {
                    match(input,LPAREN,FOLLOW_LPAREN_in_decorator182); if (state.failed) return ;
                    // Python.g:100:35: ( arglist )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==LPAREN||LA6_0==NAME||(LA6_0>=STAR && LA6_0<=DOUBLESTAR)||LA6_0==NOT||(LA6_0>=PLUS && LA6_0<=MINUS)||(LA6_0>=TILDE && LA6_0<=LBRACK)||LA6_0==LCURLY||(LA6_0>=BACKQUOTE && LA6_0<=STRING)||LA6_0==95) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // Python.g:100:35: arglist
                            {
                            pushFollow(FOLLOW_arglist_in_decorator184);
                            arglist();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }

                    match(input,RPAREN,FOLLOW_RPAREN_in_decorator187); if (state.failed) return ;

                    }
                    break;

            }

            match(input,NEWLINE,FOLLOW_NEWLINE_in_decorator191); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decorator"


    // $ANTLR start "dotted_attr"
    // Python.g:103:1: dotted_attr : NAME ( DOT NAME )* ;
    public final void dotted_attr() throws RecognitionException {
        try {
            // Python.g:104:5: ( NAME ( DOT NAME )* )
            // Python.g:104:7: NAME ( DOT NAME )*
            {
            match(input,NAME,FOLLOW_NAME_in_dotted_attr213); if (state.failed) return ;
            // Python.g:104:12: ( DOT NAME )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==DOT) ) {
                    alt8=1;
                }

